force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <label>支払</label>
    <nameField>
        <displayFormat>P-{000000000}</displayFormat>
        <label>支払ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>