force-app/main/default/objects/Payment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>支払</relationshipLabel>
    <relationshipName>PaymentAccountRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>