force-app/main/default/objects/Payment__c/fields/AccountingTicketType__c.field-meta.xml
<CustomField>
    <fullName>AccountingTicketType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>経理伝票種別</label>
    <referenceTo>SlipType__c</referenceTo>
    <relationshipName>PaymentSlipTypeRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>