force-app/main/default/objects/Payment__c/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>PaymentBankAccountRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>