force-app/main/default/objects/Payment__c/fields/DecisionApplication__c.field-meta.xml
<CustomField>
    <fullName>DecisionApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>決裁申請2</label>
    <referenceTo>DecisionApplication2__c</referenceTo>
    <relationshipLabel>支払</relationshipLabel>
    <relationshipName>DecisionApplicationPayment</relationshipName>
    <type>Lookup</type>
</CustomField>