force-app/main/default/objects/Payment__c/fields/DecisionApplicationName__c.field-meta.xml
<CustomField>
    <fullName>DecisionApplicationName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(削除予定)決裁申請名</label>
    <referenceTo>DecisionApplication__c</referenceTo>
    <relationshipLabel>支払</relationshipLabel>
    <relationshipName>PaymentDecisionApplicationRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>