force-app/main/default/objects/Payment__c/fields/ErrorNote__c.field-meta.xml
<CustomField>
    <fullName>ErrorNote__c</fullName>
    <label>エラー備考</label>
    <type>TextArea</type>
</CustomField>