force-app/main/default/objects/Payment__c/fields/FBDataCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>FBDataCreatedDate__c</fullName>
    <label>FBデータ作成日</label>
    <type>Date</type>
</CustomField>