force-app/main/default/objects/Payment__c/fields/FBDataName__c.field-meta.xml
<CustomField>
    <fullName>FBDataName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FBデータ名</label>
    <referenceTo>FbData__c</referenceTo>
    <relationshipName>PaymentFbDataRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>