force-app/main/default/objects/Payment__c/fields/IsCheck__c.field-meta.xml
<CustomField>
    <fullName>IsCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>チェック</label>
    <type>Checkbox</type>
</CustomField>