force-app/main/default/objects/Payment__c/fields/IsManualCreate__c.field-meta.xml
<CustomField>
    <fullName>IsManualCreate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>手動作成フラグ</label>
    <type>Checkbox</type>
</CustomField>