force-app/main/default/objects/Payment__c/fields/IsSpeciallyBilling__c.field-meta.xml
<CustomField>
    <fullName>IsSpeciallyBilling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>別途請求フラグ</label>
    <type>Checkbox</type>
</CustomField>