force-app/main/default/objects/Payment__c/fields/IsTransferFeeSubtract__c.field-meta.xml
<CustomField>
    <fullName>IsTransferFeeSubtract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>振手差引フラグ</label>
    <type>Checkbox</type>
</CustomField>