force-app/main/default/objects/Payment__c/fields/PaymentForeignKey__c.field-meta.xml
<CustomField>
    <fullName>PaymentForeignKey__c</fullName>
    <externalId>true</externalId>
    <label>支払外部キー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>