force-app/main/default/objects/Payment__c/fields/ProcessManagement__c.field-meta.xml
<CustomField>
    <fullName>ProcessManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>工程管理</label>
    <referenceTo>ProcessManagement__c</referenceTo>
    <relationshipLabel>支払</relationshipLabel>
    <relationshipName>Payment</relationshipName>
    <type>Lookup</type>
</CustomField>