force-app/main/default/objects/Payment__c/fields/RealEstate__c.field-meta.xml
<CustomField>
    <fullName>RealEstate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>物件</label>
    <referenceTo>RealEstate__c</referenceTo>
    <relationshipName>PaymentRealEstateRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>