force-app/main/default/objects/Payment__c/fields/RentId__c.field-meta.xml
<CustomField>
    <fullName>RentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>家賃ID</label>
    <referenceTo>Rent__c</referenceTo>
    <relationshipName>PaymentRentRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>