force-app/main/default/objects/Payment__c/fields/TotalAmount_PaymentTarget__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount_PaymentTarget__c</fullName>
    <label>合計金額_支払対象</label>
    <summarizedField>PaymentDetail__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>PaymentDetail__c.IsPaymentTarget__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>PaymentDetail__c.Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>