force-app/main/default/objects/Payment__c/fields/TransfererAccount__c.field-meta.xml
<CustomField>
    <fullName>TransfererAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>送金元口座</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>PaymentBankAccountRelation2</relationshipName>
    <type>Lookup</type>
</CustomField>