force-app/main/default/objects/Payment__c/fields/TransfererAccountContractor__c.field-meta.xml
<CustomField>
    <fullName>TransfererAccountContractor__c</fullName>
    <label>送金元口座名義</label>
    <length>255</length>
    <type>Text</type>
</CustomField>