force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RemittanceDate__c</columns>
    <columns>BankAccount__c</columns>
    <columns>Account__c</columns>
    <columns>AccountingTicketType__c</columns>
    <columns>TransfererAccountContractor__c</columns>
    <columns>TotalAmount_PaymentTarget__c</columns>
    <columns>IsTransferFeeSubtract__c</columns>
    <columns>FBDataName__c</columns>
    <columns>FBDataCreatedDate__c</columns>
    <columns>RentId__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>