force-app/main/default/objects/Payment__c/listViews/BillingManagementTeam_Payment.listView-meta.xml
<ListView>
    <fullName>BillingManagementTeam_Payment</fullName>
    <filterScope>Queue</filterScope>
    <label>請求管理チーム</label>
    <queue>BillingManagementTeam</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>