force-app/main/default/objects/Payment__c/listViews/ContractMoneyRemittanceCompletedList.listView-meta.xml
<ListView>
    <fullName>ContractMoneyRemittanceCompletedList</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>RealEstate__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>RemittanceDate__c</columns>
    <columns>BillingDate__c</columns>
    <columns>CollectScheduledDate__c</columns>
    <columns>BankAccount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RemittanceDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>FBDataCreatedDate__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>AccountingTicketType__c</field>
        <operation>equals</operation>
        <value>新規</value>
    </filters>
    <label>契約金送金済み一覧</label>
</ListView>