force-app/main/default/objects/Payment__c/listViews/PaymentProcessNotRegistrationList.listView-meta.xml
<ListView>
    <fullName>PaymentProcessNotRegistrationList</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>BankAccount__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>RemittanceDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProcessManagement__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>IsIndividualRefund__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RemittanceDate__c</field>
        <operation>lessOrEqual</operation>
    </filters>
    <label>支払工程未登録リスト</label>
</ListView>